<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">ARLearn</string>

    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="login_linked_in">Login with LinkedIn</string>
    <string name="login_eco">Login with ECO</string>

    <string name="login_to_continue">Login to continue</string>
    <string name="login_from_my_games_text">To access My Games you have to first login. \nPlease choose one of the login types.</string>

    <string name="myGames">My Games</string>
    <string name="gamePlay">Game plays</string>
    <string name="library">Library</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="nearMe">Near Me</string>

    <string name="searchText">Search</string>
    <string name="searchFullTextHint">Name, topic, location ...</string>
    <string name="category">Category</string>
    <string name="topGames">Top games</string>

    <string name="nolicense">No License</string>
    <string name="ccby">Attribution</string>
    <string name="bynd">Attribution-NoDerivs</string>
    <string name="bysa">Attribution-ShareAlike</string>
    <string name="bync">Attribution-NonCommercial</string>
    <string name="byncsa">Attribution-NonCommercial-ShareAlike</string>
    <string name="byncnd">Attribution-NonCommercial-NoDerivs</string>

    <string name="en">English</string>
    <string name="nl">Dutch</string>
    <string name="es">Spanish</string>
    <string name="de">German</string>
    <string name="fr">French</string>
    <string name="it">Italian</string>
    <string name="pt">Portuguese</string>
    <string name="bg">Bulgarian</string>
    <string name="el">Greek</string>
    <string name="pl">Polish</string>
    <string name="ru">Russian</string>

    <string name="unabletosyncgame">Unable to sync game</string>
    <string name="loading">Loading</string>
    <string name="wait">Wait</string>

    <string name="download">Download</string>
    <string name="open">Open</string>

    <!--Game Splash Screen-->

    <string name="downloadStatus">Download Status</string>
    <string name="gameMessages">Game Messages</string>
    <string name="gameContent">Game Content</string>

    <!--Notifications-->
    <string name="readMessage">Read Message</string>
    <string name="closeMessage">Close Message</string>

    <!--Network-->
    <string name="noInternet">No connection to the internet.</string>
    <string name="cancel">Cancel</string>
    <string name="wireless">Open wireless settings</string>
    <string name="operatingOffline">Operating in offline mode</string>
    <string name="contentMissingNoInternet">Some game content has not been downloaded.</string>
    <string name="submit" >Submit</string>

    <!--Data collection-->
    <string name="author" >Author</string>
    <string name="removeData" >Remove data?</string>
    <string name="yes" >Yes</string>
    <string name="recordAudio" >Record audio</string>
    <string name="startRecording" >Start recording</string>
    <string name="stopRecording" >Stop recording</string>
    <string name="provideYourText" >Provide your text</string>
    <string name="typeYourTextHere" >Type your text here...</string>
    <string name="provideValue" >Provide a value</string>

    <!--Game Stroken-->
    <string name="newMessage" >New message!</string>
    <string name="Watch" >Watch</string>

    <!--General Item-->
    <string name="messages" >Messages</string>
    <string name="message" >Message xxx of yyy</string>
    <string name="continueMessage" >Continue</string>
    <string name="scanCode" >Scan Code</string>
    <string name="provideInput" >Provide input</string>
    <string name="logout">Log out</string>
    <string name="gameDetails">Game Details</string>

    <string name="youMustLogOut">You must log out first</string>
    <string name="leaveMeLogedIn">Don\'t logout</string>
    <string name="logMeOut">Logout</string>

</resources>
