<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"
              android:orientation="vertical" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical|left"
                  android:paddingTop="50dp"
                  android:orientation="vertical" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:text="@string/login_to_continue"
                android:textSize="25dp"
                android:textColor="#33485f"
                android:typeface="sans"
                android:paddingLeft="20dp"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:text="@string/login_from_my_games_text"
                android:textSize="15dp"
                android:textColor="#33485f"
                android:typeface="sans"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_vertical|center_horizontal"


                  android:orientation="vertical" >
    <Button android:id="@+id/googleButton"
                 android:layout_height="36dip"
                 android:layout_width="195dip"
                 android:background="@drawable/button_login_google"
                 android:text="@string/login_google"
                 android:textSize="16dp"
                 android:textColor="@color/white"
                 android:gravity="left|center_vertical"
                 android:paddingLeft="40dip"
                 android:layout_marginTop="20dip"
                 android:focusable="true">
    </Button>


    <Button android:id="@+id/facebookButton"
            android:layout_height="36dip"
            android:layout_width="195dip"
            android:background="@drawable/button_login_facebook"
            android:text="@string/login_facebook"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:paddingLeft="40dip"
            android:textSize="16dp"
            android:layout_marginTop="20dip"
            android:focusable="true">
    </Button>

    <Button android:id="@+id/linkedinButton"
            android:layout_height="36dip"
            android:layout_width="195dip"
            android:background="@drawable/button_login_linkedin"
            android:text="@string/login_linked_in"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:paddingLeft="40dip"
            android:textSize="16dp"
            android:layout_marginTop="20dip"
            android:focusable="true">
    </Button>

    <Button android:id="@+id/twitterButton"
            android:layout_height="36dip"
            android:layout_width="195dip"
            android:background="@drawable/button_login_twitter"
            android:text="@string/login_twitter"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:paddingLeft="40dip"
            android:textSize="16dp"
            android:layout_marginTop="20dip"
            android:focusable="true">
    </Button>

    <Button android:id="@+id/ecoButton"
                android:layout_height="36dip"
                android:layout_width="195dip"
                android:background="@drawable/button_login_twitter"
                android:text="@string/login_eco"
                android:textColor="@color/white"
                android:gravity="left|center_vertical"
                android:paddingLeft="40dip"
                android:textSize="16dp"
                android:layout_marginTop="20dip"
                android:focusable="true">
        </Button>
    </LinearLayout>
</LinearLayout>