<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_gravity="center_vertical"
              android:gravity="center_vertical"
              android:background="#99000000"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <LinearLayout android:id="@+id/content"

                 style="@style/ARLearn.Game.DataCollection"
            >

        <TextView android:id="@+id/text"
                  android:paddingTop="20dip"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:text="@string/recordAudio"
                  android:textSize="30dp"/>



            <ImageView
                    android:id="@+id/audioFeedbackView"
                    android:paddingLeft="50dip"
                    android:paddingRight="50dip"
                    android:paddingTop="20dip"
                    android:paddingBottom="20dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/game_data_collection_input_norecording"
                    />



        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/mediaBar"

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:visibility="gone"

                >

            <ImageView
                    android:id="@+id/playPauseButton"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:layout_centerVertical="true"

                    android:layout_margin="10dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/btn_play_black" />


            <ImageView
                    android:id="@+id/deleteRecordingButton"
                    android:layout_width="30dip"
                    android:layout_height="30dip"

                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="4dip"
                    android:src="@drawable/game_data_collection_input_trash" />


            <SeekBar
                    android:id="@+id/seekbar"
                    android:layout_toRightOf="@id/playPauseButton"
                    android:layout_toLeftOf="@id/deleteRecordingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"

                    android:layout_centerVertical="true"
                    android:progressDrawable="@drawable/game_general_item_seekbar_progress_theme1"
                    android:thumb="@drawable/game_general_item_seekbar_thumb_theme1"
                    />




        </RelativeLayout>

        <!--<ImageView-->
                <!--android:id="@+id/deleteRecordingButton"-->
                <!--android:layout_width="40dip"-->
                <!--android:layout_height="40dip"-->
<!--android:visibility="gone"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:padding="4dip"-->
                <!--android:src="@drawable/game_data_collection_input_trash" />-->


        <TextView
                android:id="@+id/startRecording"
                style="@style/ARLearn.Game.Button"
                android:text="@string/startRecording"/>



        <TextView
                android:id="@+id/stopRecording"
                style="@style/ARLearn.Game.Button.StopRecording"
                android:visibility="gone"
                android:text="@string/stopRecording"/>

        <TextView
                android:id="@+id/dataCollectionSubmit"
                android:visibility="gone"
                style="@style/ARLearn.Game.Button"
                android:text="@string/submit"/>

        <TextView
                android:id="@+id/cancelId"

                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:textSize="15dp"
                android:paddingTop="20dip"

                android:paddingBottom="20dip"
                android:layout_gravity="center_horizontal"
                android:text="@string/cancel"/>
    </LinearLayout>



</LinearLayout>