<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:background="#99000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

    <LinearLayout android:id="@+id/content"

                  android:orientation="vertical"
                  android:padding="20dip"
                  android:layout_gravity="center_horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_marginTop="50dip"
                  android:layout_marginBottom="75dip"
                  android:layout_marginRight="10dip"
                  android:layout_marginLeft="10dip"

                  style="@style/ARLearn.Game.DataCollection"
            >

        <TextView android:id="@+id/text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingBottom="20dip"
                  android:text="@string/provideYourText"
                  android:layout_weight="0"
                  android:textSize="30dp"/>
        <EditText
                android:id="@+id/dataCollectionText"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:gravity="top"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:hint="@string/typeYourTextHere"
                android:background="@android:color/white"
                />
        <TextView
                android:id="@+id/dataCollectionSubmit"
                android:visibility="gone"

                android:layout_weight="0"
                style="@style/ARLearn.Game.Button"
                android:text="@string/submit"

                android:layout_marginBottom="20dip"

                />

        <TextView
                android:id="@+id/cancelId"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:paddingTop="20dip"

                android:paddingBottom="20dip"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:text="Cancel"/>
    </LinearLayout>



</LinearLayout>