<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp"
              android:paddingBottom="16dp"
              android:orientation="vertical"
              android:background="@drawable/background"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/gamePane"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:padding="20dp"
                  android:background="@drawable/gradient_store_game_overview_whitebackground"
                  android:orientation="vertical"
            >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:paddingBottom="20dp"
                      android:orientation="horizontal"
                >

            <ImageView
                    android:id="@+id/icon"
                    android:contentDescription="icon of this game"
                    android:layout_width="90dip"
                    android:layout_height="90dip"
                    android:layout_marginRight="6dip"

                    android:src="@drawable/ic_default_game"/>

            <LinearLayout
                    android:orientation="vertical"

                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/gameTitleId"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/purple"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:text="Record game "
                        android:lines="2"
                        android:inputType="textMultiLine|textNoSuggestions|none"
                        android:maxLines="3"/>

                <TextView
                        android:id="@+id/gameCategoryId"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/purple"
                        android:textSize="10dp"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="5dip"
                        android:text="Education"/>


                <TextView
                        android:id="@+id/downloadId"
                        style="@style/ARLearn.StoreGameRowBigDownload"


                        android:layout_height="0dip"
                        android:layout_weight="1"
                        android:textSize="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/download"/>
                <TextView
                        android:id="@+id/openId"
                        style="@style/ARLearn.StoreGameRowBigDownload"


                        android:layout_height="0dip"
                        android:layout_weight="1"
                        android:textSize="10dp"
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        android:text="@string/open"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:background="@drawable/gradient_store_game_overview_gray_seperator"
                        android:orientation="horizontal"
                        >
            <LinearLayout
                    android:id="@+id/stars"
                    android:orientation="horizontal"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/star1"
                        android:layout_width="20dip"
                        android:layout_height="15dip"
                        android:src="@drawable/ic_star_grey"
                        android:contentDescription="star"
                        />

                <ImageView
                        android:id="@+id/star2"
                        android:layout_width="20dip"
                        android:layout_height="15dip"
                        android:src="@drawable/ic_star_grey"
                        android:contentDescription="star"
                        />
                <ImageView
                        android:id="@+id/star3"
                        android:layout_width="20dip"
                        android:layout_height="15dip"
                        android:src="@drawable/ic_star_grey"
                        android:contentDescription="star"
                        />
                <ImageView
                        android:id="@+id/star4"
                        android:layout_width="20dip"
                        android:layout_height="15dip"
                        android:src="@drawable/ic_star_grey"
                        android:contentDescription="star"
                        />
                <ImageView
                        android:id="@+id/star5"
                        android:layout_width="20dip"
                        android:layout_height="15dip"
                        android:src="@drawable/ic_star_grey"
                        android:contentDescription="star"
                        />
            </LinearLayout>


            <TextView
                    android:id="@+id/languageId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:textColor="@color/purple"
                    android:singleLine="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/en"/>
        </RelativeLayout>

        <ScrollView
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

            <!--<TextView-->
                    <!--android:id="@+id/gameDescriptionId"-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="10dp"-->

                    <!--android:singleLine="false"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:padding="5dp"-->
                    <!--android:textColor="@color/purple"-->
                    <!--android:text=""/>-->

            <WebView  android:id="@+id/gameStoreDescriptionId"
                      android:layout_width="fill_parent"
                      android:layout_height="match_parent"
                      android:textSize="10dp"

                      android:singleLine="false"
                      android:layout_alignParentRight="true"
                      android:padding="5dp"
                      android:textColor="@color/purple"
                      android:text="--"/>
        </ScrollView>




        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/gradient_store_game_overview_gray_seperator"
                        android:orientation="horizontal"
                >

            <TextView
                    android:id="@+id/licenseId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:textColor="@color/purple"

                    android:singleLine="true"
                    android:layout_alignParentLeft="true"
                    android:padding="5dp"
                    android:text="@string/nolicense"/>

            <TextView
                    android:id="@+id/dateId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:textColor="@color/purple"

                    android:singleLine="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="@string/nolicense"/>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
